# 274NN666

./: .gitattributes  .gitattributes.REMOVED.git-id  .gitignore  274NN666.sln  274NN666.vcxproj  274NN666.vcxproj.filters  CMakeLists.txt  CMakePresets.json  README.md  cities.csv.REMOVED.git-id  countries.csv.REMOVED.git-id  starbucks.csv.REMOVED.git-id  test.csv
274F16NearestSB/: main.cpp
274F16NearestSB.xcodeproj/: project.pbxproj
274F16NearestSB.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
274F16NearestSB.xcodeproj/project.xcworkspace/xcuserdata/nick.xcuserdatad/: UserInterfaceState.xcuserstate
274F16NearestSB.xcodeproj/project.xcworkspace/xcuserdata/yunlongliu.xcuserdatad/: UserInterfaceState.xcuserstate.REMOVED.git-id
274F16NearestSB.xcodeproj/xcshareddata/xcschemes/: 274F16NearestSB.xcscheme
274F16NearestSB.xcodeproj/xcuserdata/nick.xcuserdatad/xcschemes/: xcschememanagement.plist
274F16NearestSB.xcodeproj/xcuserdata/yunlongliu.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist.REMOVED.git-id
274F16NearestSB.xcodeproj/xcuserdata/yunlongliu.xcuserdatad/xcschemes/: 274F16NearestSB.xcscheme  xcschememanagement.plist
DerivedData/274F16NearestSB/: FindNavigator.history  info(1).plist  info(2).plist  info(3).plist  info(4).plist  info(5).plist  info(6).plist  info(7).plist  info.plist
DerivedData/274F16NearestSB/Logs/Debug/: 06FB4000-D015-44D4-A5B0-9B10D754F39D.xcactivitylog  26D91962-9DB7-4731-B82D-75BF944D1451.xcactivitylog  54C327F7-2ABC-426F-BC8A-63E6D34D85DA.xcactivitylog  5FD072D8-AB07-454B-9158-DE9D0179F3CE.xcactivitylog  638BE06C-7AB2-495B-AC12-58C578A46B52.xcactivitylog  733A971E-36AE-4B12-855F-D28D5EFC80C6.xcactivitylog  85FFB9ED-0141-40DC-B0F2-DDEE7EAE36FB.xcactivitylog  9453E871-FCA3-411D-840C-2F02EC766E10.xcactivitylog  B851890B-AAB8-400F-98C6-D16E8F5A0610.xcactivitylog  BCD5BC63-BF6D-4DBB-85C7-DBEBB890C5B2.xcactivitylog  LogStoreManifest.plist
DerivedData/274F16NearestSB/Logs/Issues/: 2D18D6E6-BBC4-4E89-A20F-B5975792C1B6.xcactivitylog  607B0A78-B0D3-45DF-80F0-FE325091E1F1.xcactivitylog  66AEC915-3661-4191-ACF4-B5757159D96E.xcactivitylog  71E83D18-2230-45E2-A263-728C29795811.xcactivitylog  LogStoreManifest 2.plist  (+5 more)
DerivedData/274F16NearestSB/TextIndex/: TextFragmentIndex-v7.idx.REMOVED.git-id  TextFragmentIndex-v8.idx.REMOVED.git-id
DerivedData/ModuleCache.noindex/: Session.modulevalidation
OptimizationProfiles/: .274F16NearestSB.profdata.icloud
VTune Profiler Results/274NN666/: 274NN666.vtuneproj
assembly/: best naive.txt  commited_remove_right_idx.txt  right_idx_alias.txt  right_idx_inc.txt  right_idx_inc_best_nd_idx.txt  right_idx_inc_best_nd_idx_bool_unroll.txt
cppsrc/: 274NNGCC.REMOVED.git-id  274NNICC.REMOVED.git-id  274NNLLVM.REMOVED.git-id  Algorithm.hpp  BFCartPtSolver.cpp  BFCartPtSolver.hpp  BFEUCPtSolver.cpp  BFEUCPtSolver.hpp  BFEUCPtSolver.optrpt  BFLocalStorageSBSolver.cpp  BFLocalStorageSBSolver.hpp  BFSBSolver.cpp  BFSBSolver.hpp  BFSBSolver.optrpt  BKDT3DCartGridSBSolver.cpp  BKDT3DCartGridSBSolver.hpp  BKDTGridSBSolver.cpp  BKDTGridSBSolver.hpp  BKDTGridSBSolver.optrpt  BKDTGridSBSolver.optrpt.REMOVED.git-id  BKDTSBSolver.cpp  BKDTSBSolver.hpp  BKDTSBSolver.optrpt  BKDTSBSolver.optrpt.REMOVED.git-id  BoundedPQueue.hpp  Definition.hpp  GridSBSolver.cpp  GridSBSolver.hpp  GridSBSolver.optrpt  GridSBSolver.optrpt.REMOVED.git-id  KDTSBSolver.cpp  KDTSBSolver.hpp  KDTSBSolver.optrpt  KDTSBSolver.optrpt.REMOVED.git-id  KDTree.hpp  KDTreeCusMem.hpp  KDTreeExpandLongest.hpp  KDTreeExpandLongestVec.hpp  KDTreeMetaData.hpp  KDTreeVec.hpp  (+32 more)
src/: Controller.java  Grid.java  KDTree.java  Starbucks.java  StudentStarbucks.java
(+3455 files in other folders)
